--- a/po/fr.po
+++ b/po/fr.po
@@ -14,9 +14,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
-"POT-Creation-Date: 2016-08-22 15:08+0200\n"
-"PO-Revision-Date: 2016-08-22 12:05+0000\n"
-"Last-Translator: Thomas Lange <thomas-lange2@gmx.de>\n"
+"POT-Creation-Date: 2016-09-18 19:53+0200\n"
+"PO-Revision-Date: 2016-09-16 19:07+0000\n"
+"Last-Translator: French language coordinator <yahoe.001@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/jlindgren/audacious/language/"
 "fr/)\n"
 "Language: fr\n"
@@ -896,7 +896,7 @@ msgstr "URI %s invalide."
 #: src/cdaudio/cdaudio-ng.cc:278
 #, c-format
 msgid "Track %d not found."
-msgstr "Piste %d non trouvée."
+msgstr "La piste %d est introuvable."
 
 #: src/cdaudio/cdaudio-ng.cc:280
 #, c-format
@@ -1493,7 +1493,7 @@ msgstr "Omettre l'en-tête DBV Xing"
 
 #: src/filewriter/filewriter.cc:532
 msgid "<b>Frame Headers</b>"
-msgstr "<b>Blocs en-tête </b>"
+msgstr "<b>En-tête de trame</b>"
 
 #: src/filewriter/filewriter.cc:533
 msgid "Mark as copyright"
@@ -1546,7 +1546,7 @@ msgstr "Décodeur FLAC"
 
 #: src/flac/metadata.cc:252 src/wavpack/wavpack.cc:209
 msgid "lossless"
-msgstr "sans perte"
+msgstr "Sans perte"
 
 #: src/flac/plugin.cc:169
 msgid ""
@@ -2083,20 +2083,20 @@ msgstr "Positionnement avec les flèches :"
 msgid "Scroll on song change"
 msgstr "Déplacer vers la pièce en cours"
 
-#: src/gtkui/ui_gtk.cc:74
+#: src/gtkui/ui_gtk.cc:76
 msgid "GTK Interface"
 msgstr "Interface GTK"
 
-#: src/gtkui/ui_gtk.cc:228 src/skins/main.cc:219 src/skins-qt/main.cc:214
+#: src/gtkui/ui_gtk.cc:224 src/skins/main.cc:219 src/skins-qt/main.cc:214
 #, c-format
 msgid "%s - Audacious"
 msgstr "%s - Audacious"
 
-#: src/gtkui/ui_gtk.cc:230 src/qtui/main_window.cc:256
+#: src/gtkui/ui_gtk.cc:226 src/qtui/main_window.cc:256
 msgid "Buffering ..."
 msgstr "Mise en mémoire tampon..."
 
-#: src/gtkui/ui_gtk.cc:233 src/skins/main.cc:221 src/skins-qt/main.cc:216
+#: src/gtkui/ui_gtk.cc:229 src/skins/main.cc:221 src/skins-qt/main.cc:216
 msgid "Audacious"
 msgstr "Audacious"
 
@@ -2910,7 +2910,7 @@ msgstr "Je travaille..."
 
 #: src/qtui/dialog_windows.cc:43
 msgid "Information"
-msgstr ""
+msgstr "Informations"
 
 #: src/qtui/filter_input.cc:44 src/skins/search-select.cc:76
 msgid "Search"
@@ -3046,40 +3046,47 @@ msgstr "192 kHz :"
 
 #: src/scrobbler2/config_window.cc:19
 msgid "Checking Last.fm access ..."
-msgstr ""
+msgstr "Vérification de l'accès à Last.fm..."
 
 #: src/scrobbler2/config_window.cc:27
 msgid ""
 "Your scrobbles are being saved on your computer temporarily.  They will be "
 "submitted as soon as Audacious is allowed access."
 msgstr ""
+"Vos scrobbles sont enregistrés temporairement sur votre ordinateur. Ils "
+"seront transmis dès qu'Audacious sera autorisé à accéder au service."
 
 #: src/scrobbler2/config_window.cc:33
 #, c-format
 msgid "Permission granted.  Scrobbling for user %s."
-msgstr ""
+msgstr "Permission accordée. Scrobblage pour l'utilisateur %s."
 
 #: src/scrobbler2/config_window.cc:37
 msgid ""
 "Permission denied.  Open the following URL in a browser, allow Audacious "
 "access to your account, and then click 'Check Permission' again:"
 msgstr ""
+"Permission refusée. Ouvrez l'URL suivante dans un navigateur, autorisez "
+"l'accès à votre compte à Audacious, puis cliquez sur « Vérifier la "
+"permission » de nouveau : "
 
 #: src/scrobbler2/config_window.cc:47
 msgid "There was a problem contacting Last.fm."
-msgstr ""
+msgstr "Contacter Last.fm a posé un problème."
 
 #: src/scrobbler2/config_window.cc:86
 msgid "Check Permission"
-msgstr ""
+msgstr "Vérifier la permission"
 
 #: src/scrobbler2/config_window.cc:87
 msgid "Revoke Permission"
-msgstr ""
+msgstr "Révoquer la permission"
 
 #: src/scrobbler2/config_window.cc:91
 msgid "You need to allow Audacious to scrobble tracks to your Last.fm account."
 msgstr ""
+"Vous devez autoriser Audacious à scrobbler des pistes vers votre compte Last."
+"fm."
 
 #: src/scrobbler2/scrobbler.cc:29
 msgid "Scrobbler 2.0"
